upload files for gps 2.1

--- a/week-4/gps/gps2-1.html
+++ b/week-4/gps/gps2-1.html
@@ -1,8 +1,11 @@
 <!--
 Write your names here:
-1.
-2.
-We spent [#] hours on this challenge.
+1.Michael Pintar
+2.Akeem Street
+We spent 1 hour on this challenge.
+
+Reflection:
+I definitely feel more confident about positioning now. I spent some time watching video tutorials about absolute positioning before undertaking this challenge, and as luck would have it we wound up using absolute positioning! All my questions about it are solved now, as that was the last thing that was difficult for me to understand.
 -->
 
 <!-- This challenge uses HTML5 syntax that may not be available in all browsers (It works in Chrome and Safari, from my testing. (<details> and<summary>). -->
